add navbar class and sublasses

--- a/style.css
+++ b/style.css
@@ -1,7 +1,33 @@
 .navbar {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: aliceblue;
     overflow: hidden;
     background-color: #333;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
+  }
+
+.n-1{
+    background-color: wheat;
+    
+}
+
+.n-2{
+    background-color: pink;
+}
+
+.n-3{
+    background-color: yellow;
+}
+
+  .navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
   }
