--- a/style.css
+++ b/style.css
@@ -3,15 +3,16 @@
     flex-direction: row;
     justify-content: space-between;
     color: aliceblue;
-    overflow: hidden;
     background-color: #333;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
+    max-height: 50px;
+    width: 100%;
   }
 
 .n-1{
     background-color: wheat;
+    align-items: stretch;
     
 }
 
@@ -23,11 +24,23 @@
     background-color: yellow;
 }
 
-  .navbar a {
+.navbar a {
     float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
+}
+
+.main-container{
+    display: grid;
+    grid-template-columns: 2fr, 1fr;
+    grid-template-rows: 1fr;
+
+}
+ body{
+     background-color: black;
+ }
+
+ 
