--- a/style.css
+++ b/style.css
@@ -18,6 +18,20 @@
     background-color: #202020;
 }
 
+.n-2 button{
+    background-color: #202020;
+    color: grey;
+    border:none;
+}
+
+.n-2 input{
+    background-color: #181818;
+    border-style: solid;
+    border-color: grey;
+    height: 25px;
+    width: auto;
+    
+}
 .n-3{
     display: flex;
     flex-direction: row;
